sumo/tests/sumo/extended/emitter/errors/vtypedist/missing_id/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: MSTriggeredSource emitter: No vehicle type id given.
Quitting (on error).
